v.0.6.12 - added a general logout support, a  global default timeout, and XPath support